# omni-mcp

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
deploy/helm/omni-mcp/: Chart.yaml  values.yaml
deploy/helm/omni-mcp/templates/: _helpers.tpl  deployment.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: ARCHITECTURE.hu.md  ARCHITECTURE.md  CLIENT_CONTRACT.hu.md  CLIENT_CONTRACT.md  LLM_SETUP.md  README.hu.md  SECURITY.hu.md  SECURITY.md
src/omni_mcp/: __init__.py  config.py  llm_runtime.py  main.py  security.py  server.py  storage.py
src/omni_mcp/rss_digest/: __init__.py  service.py  utils.py
src/omni_mcp/skills/: __init__.py  builtin.py  rss_digest.py
tests/: test_llm_runtime.py  test_rss_digest_utils.py  test_security.py
